js/js.translator/testData/incremental/invalidation/fakeOverrideInlineProperty/lib1/l1.0.kt
abstract class AbstractClassA {
    inline konst propertyWithGetter: String
        get() = "0"

    inline var propertyWithSetter: String
        get() = savedStr
        set(str) {
            savedStr = "$str 0"
        }

    var savedStr = "empty"
}
